--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col-6">
                     <nav class="nav">
                         <ul class="menu">
-                            <li><a href="">Home</a></li>
+                            <li><a href="">Home 1</a></li>
                             <li>
                                 <a href="">Products <span class="down-arrow"></span></a>
                                 <ul class="menu-products">
