--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 </ul>
                             </li>
                             <li><a href="">Payment</a></li>
-                            <li><a href="">Shipping</a></li>
+                            <li><a href="">Shipping 3</a></li>
                         </ul>
                     </nav>
                 </div>
