--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="">Payment</a></li>
+                            <li><a href="">Payment 4</a></li>
                             <li><a href="">Shipping</a></li>
                         </ul>
                     </nav>
