--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         </div>
     </header>
     <main class="main">
-        <div class="container">Main</div>
+        <div class="container">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nisi ducimus, exercitationem modi sequi cumque ab, ullam placeat illo vero dolorum sunt. Quod modi molestiae alias sequi accusantium aliquid odio!</p>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">Footer</div>
