added cart counter

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <img src="img/search-icon.png" alt="search">
                             </button>
                         </form>
-                        <div class="cart">
+                        <div class="cart" id="cart">
                             <a href="">
                                 <div class="cart-content"></div>
                             </a>
@@ -612,5 +612,6 @@
     <footer class="footer">
         <div class="container">&copy Copywrite 2017</div>
     </footer>
+    <script src="cart-counter.js"></script>
 </body>
 </html>
