--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                         <div class="cart" id="cart">
                             <a href="">
                                 <div class="cart-content"></div>
+                                <div class="cart-counter">0</div>
                             </a>
                         </div>
                     </div>
@@ -609,9 +610,26 @@
             </div>
         </div>
     </main>
+    <div class="modal">
+        <div class="modal-block">
+            <form action="" class="form-call">
+                <div class="btn-close">X</div>
+                <h3>Please call for more details</h3>
+                <div class="form-field">
+                    <input type="text" placeholder="Your name">
+                </div>
+                <div class="form-field">
+                    <input type="text" placeholder="Your phone">
+                </div>
+                <button class="please-call">Please call</button>
+            </form>
+        </div>
+    </div>
+
     <footer class="footer">
         <div class="container">&copy Copywrite 2017</div>
     </footer>
-    <script src="cart-counter.js"></script>
+    <!-- <script src="cart-counter.js"></script> -->
+    <script src="app.js"></script>
 </body>
 </html>
