--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Shop-project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -79,7 +81,16 @@
     <main class="main">
         <div class="slider">
             <div class="container">
-                <!-- slider content -->
+                <div class="row">
+                    <div class="col-12">
+                        <div class="slider-content">
+                            <div>Slide #1</div>
+                            <div>Slide #2</div>
+                            <div>Slide #3</div>
+                            <div>Slide #4</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container">
@@ -629,6 +640,9 @@
     <footer class="footer">
         <div class="container">&copy Copywrite 2017</div>
     </footer>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <!-- <script src="cart-counter.js"></script> -->
     <script src="app.js"></script>
 </body>
