added counter for each item and upgrated card counter

--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
                                         <div class="item-cost">
                                             $599<sup> 25</sup> 
                                         </div>
+                                        <div class="product-quantity">
+                                            <button class="decrement-btn">-</button>
+                                            <input type="text" value="1" readonly>
+                                            <button class="increment-btn">+</button>
+                                        </div>
                                         <div class="item-action">
                                             <button 
                                             class="item-details" 
@@ -283,6 +288,11 @@
                                         </div>
                                         <div class="item-cost">
                                             $1250<sup> 99</sup> 
+                                        </div>
+                                        <div class="product-quantity">
+                                            <button class="decrement-btn">-</button>
+                                            <input type="text" value="1" readonly>
+                                            <button class="increment-btn">+</button>
                                         </div>
                                         <div class="item-action">
                                             <button 
@@ -327,6 +337,11 @@
                                         <div class="item-cost">
                                             $399<sup> 50</sup> 
                                         </div>
+                                        <div class="product-quantity">
+                                            <button class="decrement-btn">-</button>
+                                            <input type="text" value="1" readonly>
+                                            <button class="increment-btn">+</button>
+                                        </div>
                                         <div class="item-action">
                                             <button 
                                             class="item-details" 
@@ -369,6 +384,11 @@
                                         </div>
                                         <div class="item-cost">
                                             $599<sup> 25</sup> 
+                                        </div>
+                                        <div class="product-quantity">
+                                            <button class="decrement-btn">-</button>
+                                            <input type="text" value="1" readonly>
+                                            <button class="increment-btn">+</button>
                                         </div>
                                         <div class="item-action">
                                             <button 
@@ -413,6 +433,11 @@
                                         <div class="item-cost">
                                             $1250<sup> 99</sup> 
                                         </div>
+                                        <div class="product-quantity">
+                                            <button class="decrement-btn">-</button>
+                                            <input type="text" value="1" readonly>
+                                            <button class="increment-btn">+</button>
+                                        </div>
                                         <div class="item-action">
                                             <button 
                                             class="item-details" 
@@ -455,6 +480,11 @@
                                         </div>
                                         <div class="item-cost">
                                             $399<sup> 50</sup> 
+                                        </div>
+                                        <div class="product-quantity">
+                                            <button class="decrement-btn">-</button>
+                                            <input type="text" value="1" readonly>
+                                            <button class="increment-btn">+</button>
                                         </div>
                                         <div class="item-action">
                                             <button 
@@ -499,6 +529,11 @@
                                         <div class="item-cost">
                                             $599<sup> 25</sup> 
                                         </div>
+                                        <div class="product-quantity">
+                                            <button class="decrement-btn">-</button>
+                                            <input type="text" value="1" readonly>
+                                            <button class="increment-btn">+</button>
+                                        </div>
                                         <div class="item-action">
                                             <button 
                                             class="item-details" 
@@ -542,6 +577,11 @@
                                         <div class="item-cost">
                                             $1250<sup> 99</sup> 
                                         </div>
+                                        <div class="product-quantity">
+                                            <button class="decrement-btn">-</button>
+                                            <input type="text" value="1" readonly>
+                                            <button class="increment-btn">+</button>
+                                        </div>
                                         <div class="item-action">
                                             <button 
                                             class="item-details" 
@@ -584,6 +624,11 @@
                                         </div>
                                         <div class="item-cost">
                                             $399<sup> 50</sup> 
+                                        </div>
+                                        <div class="product-quantity">
+                                            <button class="decrement-btn">-</button>
+                                            <input type="text" value="1" readonly>
+                                            <button class="increment-btn">+</button>
                                         </div>
                                         <div class="item-action">
                                             <button 
